<resources>
    <string name="app_name">ukl_masak_2</string>
    <string name="langkah1">1) 2 buah mangga (pastikan buah mangga sudah matang)</string>
    <string name="langkah2">2) 2 sdm gula pasir</string>
    <string name="langkah3">3) susu kental manis secukupnya</string>
    <string name="langkah4">4) air putih (secukupnya)</string>
    <string name="langkah5"> 5) es batu (sesuai selera) </string>
</resources>